--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "bootstrap": "^4.0.0",
-    "counterup": "^1.0.2",
+    "counterup2": "^1.0.4",
     "font-awesome": "^4.7.0",
     "ionicons": "^2.0.0",
     "isotope-layout": "^3.0.5",
