--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-     "@angular/animations": "~12.2.5",
+    "@angular/animations": "~12.2.5",
     "@angular/common": "~12.2.5",
     "@angular/compiler": "~12.2.5",
     "@angular/core": "~12.2.5",
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~12.2.5",
     "@angular/platform-browser-dynamic": "~12.2.5",
     "@angular/router": "~12.2.5",
+    "@angular/service-worker": "~12.2.5",
+    "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
