--- a/package.json
+++ b/package.json
@@ -1,76 +1,87 @@
 {
-  "name": "client",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.2.5",
-    "@angular/common": "~12.2.5",
-    "@angular/compiler": "~12.2.5",
-    "@angular/core": "~12.2.5",
-    "@angular/forms": "~12.2.5",
-    "@angular/localize": "~12.2.5",
-    "@angular/platform-browser": "~12.2.5",
-    "@angular/platform-browser-dynamic": "~12.2.5",
-    "@angular/router": "~12.2.5",
-    "@angular/service-worker": "~12.2.5",
-    "@auth0/angular-jwt": "^5.0.2",
-    "@fortawesome/angular-fontawesome": "^0.8.2",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "animate.css": "^4.1.1",
-    "bootstrap": "^4.5.0",
-    "lightbox2": "^2.11.3",
-    "owl.carousel": "^2.3.4",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.5",
-    "@angular/cli": "~12.2.5",
-    "@angular/compiler-cli": "~12.2.5",
-    "@angular/elements": "^12.2.10",
-    "@babel/core": "^7.15.8",
-    "@compodoc/compodoc": "^1.1.15",
-    "@storybook/addon-actions": "^6.3.12",
-    "@storybook/addon-essentials": "^6.3.12",
-    "@storybook/addon-links": "^6.3.12",
-    "@storybook/angular": "^6.3.12",
-    "@storybook/builder-webpack5": "^6.3.12",
-    "@storybook/manager-webpack5": "^6.3.12",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.8",
-    "@webcomponents/custom-elements": "^1.5.0",
-    "babel-loader": "^8.2.2",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
-  }
+	"name": "client",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"test": "ng test",
+		"prepare-pr": "npm run format && npm run lint ",
+		"e2e": "ng e2e",
+		"docs:json": "compodoc -p ./tsconfig.json -e json -d .",
+		"storybook": "npm run docs:json && start-storybook -p 6006",
+		"build-storybook": "npm run docs:json && build-storybook",
+		"format": "npx prettier --write ./src/app/**/*",
+		"format:check": "npx prettier --check ./src/app/**/*",
+		"harsh-lint": "npx eslint ./src/app/**/* --ext .js,.jsx,.ts,.tsx,.html",
+		"lint": "npx eslint ./src/app/**/* --ext .js,.jsx,.ts,.tsx,.html --quiet"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~12.2.5",
+		"@angular/common": "~12.2.5",
+		"@angular/compiler": "~12.2.5",
+		"@angular/core": "~12.2.5",
+		"@angular/forms": "~12.2.5",
+		"@angular/localize": "~12.2.5",
+		"@angular/platform-browser": "~12.2.5",
+		"@angular/platform-browser-dynamic": "~12.2.5",
+		"@angular/router": "~12.2.5",
+		"@angular/service-worker": "~12.2.5",
+		"@auth0/angular-jwt": "^5.0.2",
+		"@fortawesome/angular-fontawesome": "^0.8.2",
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@fortawesome/fontawesome-svg-core": "^1.2.28",
+		"@fortawesome/free-brands-svg-icons": "^5.13.0",
+		"@fortawesome/free-regular-svg-icons": "^5.13.0",
+		"@fortawesome/free-solid-svg-icons": "^5.13.0",
+		"@ng-bootstrap/ng-bootstrap": "^10.0.0",
+		"@ngx-translate/core": "^13.0.0",
+		"@ngx-translate/http-loader": "^6.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"animate.css": "^4.1.1",
+		"bootstrap": "^4.5.0",
+		"eslint": "^8.0.1",
+		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-html": "^6.2.0",
+		"lightbox2": "^2.11.3",
+		"owl.carousel": "^2.3.4",
+		"prettier": "^2.4.1",
+		"rxjs": "~6.6.0",
+		"tslib": "^2.0.0",
+		"zone.js": "~0.11.4"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~12.2.5",
+		"@angular/cli": "~12.2.5",
+		"@angular/compiler-cli": "~12.2.5",
+		"@angular/elements": "^12.2.10",
+		"@babel/core": "^7.15.8",
+		"@compodoc/compodoc": "^1.1.15",
+		"@storybook/addon-actions": "^6.3.12",
+		"@storybook/addon-essentials": "^6.3.12",
+		"@storybook/addon-links": "^6.3.12",
+		"@storybook/angular": "^6.3.12",
+		"@storybook/builder-webpack5": "^6.3.12",
+		"@storybook/manager-webpack5": "^6.3.12",
+		"@types/jasmine": "~3.5.0",
+		"@types/jasminewd2": "~2.0.3",
+		"@types/node": "^12.19.8",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@webcomponents/custom-elements": "^1.5.0",
+		"babel-loader": "^8.2.2",
+		"codelyzer": "^6.0.0",
+		"jasmine-core": "~3.6.0",
+		"jasmine-spec-reporter": "~5.0.0",
+		"karma": "~6.3.4",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage-istanbul-reporter": "~3.0.2",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "^1.5.0",
+		"protractor": "~7.0.0",
+		"ts-node": "~8.3.0",
+		"tslint": "~6.1.0",
+		"typescript": "~4.3.5"
+	}
 }
