--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-html": "^6.2.0",
+		"eslint-plugin-unused-imports": "^1.1.5",
 		"lightbox2": "^2.11.3",
 		"owl.carousel": "^2.3.4",
 		"prettier": "^2.4.1",
